--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#46E08B"
-    tools:context=".LoginActivity">
+    android:paddingHorizontal="20dp"
+    tools:context=".activities.LoginActivity">
 
     <ImageView
         android:id="@+id/imageView2"
