--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -62,6 +62,8 @@
         android:layout_marginTop="10dp"
         android:background="@android:color/white"
         android:hint="@string/address"
+        android:focusableInTouchMode="false"
+        android:onClick="goPlacePicker"
         android:paddingHorizontal="10dp"
         android:paddingVertical="10dp"
         android:textColor="@color/black"
