--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -114,12 +114,14 @@
         app:layout_constraintTop_toBottomOf="@id/view2" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_participants"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
         android:paddingBottom="100dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/btn_sumbit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,7 +135,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:background="@color/darkgreen"
-        android:onClick="submit"
+        android:onClick="joinEvent"
         android:text="@string/join"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
