--- a/app/src/main/res/layout/rv_user_detail.xml
+++ b/app/src/main/res/layout/rv_user_detail.xml
@@ -25,6 +25,27 @@
         app:layout_constraintBottom_toBottomOf="@id/iv_user_profile"
         app:layout_constraintStart_toEndOf="@id/iv_user_profile"
         app:layout_constraintTop_toTopOf="@id/iv_user_profile"
-        />
+        app:layout_constraintVertical_bias="0.25" />
+
+    <TextView
+        android:id="@+id/tv_latest_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:text="@string/user_name"
+        android:textColor="@color/quantum_grey"
+        android:textSize="15sp"
+        app:layout_constraintStart_toEndOf="@id/iv_user_profile"
+        app:layout_constraintTop_toBottomOf="@id/tv_username" />
+
+    <ImageButton
+        android:id="@+id/ib_touch_field"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintBottom_toBottomOf="@id/iv_user_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
