--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="greenishBlue">#339E66</color>
     <color name="darkgreen">#2D833F</color>
+    <color name="cyan">#E4FF69</color>
 </resources>
