--- a/app/src/main/res/layout/item_message_sender.xml
+++ b/app/src/main/res/layout/item_message_sender.xml
@@ -22,16 +22,17 @@
         android:id="@+id/card"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="end"
         android:layout_margin="10dp"
-        app:cardCornerRadius="4dp"
+        app:cardBackgroundColor="@color/cyan"
+        app:cardCornerRadius="5dp"
         app:cardElevation="10dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:orientation="vertical"
-            android:textSize="17sp">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/messageTextView"
