--- a/app/src/main/res/layout/rv_user_detail.xml
+++ b/app/src/main/res/layout/rv_user_detail.xml
@@ -6,9 +6,11 @@
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/iv_user_profile"
-        android:layout_width="70dp"
+        android:layout_width="50dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@id/bottom"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -35,6 +37,7 @@
         android:text="@string/user_name"
         android:textColor="@color/quantum_grey"
         android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="@id/iv_user_profile"
         app:layout_constraintStart_toEndOf="@id/iv_user_profile"
         app:layout_constraintTop_toBottomOf="@id/tv_username" />
 
@@ -47,5 +50,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/bottom"
+        android:layout_width="0dp"
+        android:layout_height="1px"
+        android:background="@color/quantum_grey"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ib_touch_field" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
