--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,6 +54,7 @@
         android:layout_marginTop="10dp"
         android:background="@android:color/white"
         android:hint="@string/password"
+        android:inputType="textPassword"
         android:padding="15dp"
         android:textColor="@android:color/black"
         android:textColorHint="@color/quantum_grey"
