--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -54,8 +54,8 @@
         android:layout_height="0dp"
         android:layout_margin="5dp"
         android:background="@android:color/white"
-        android:focusableInTouchMode="false"
         android:hint="@string/address"
+        android:imeOptions="actionSearch"
         android:inputType="text"
         android:maxLines="1"
         android:paddingHorizontal="10dp"
@@ -64,6 +64,18 @@
         app:layout_constraintEnd_toStartOf="@id/ib_setting"
         app:layout_constraintStart_toEndOf="@id/ib_message"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/pb_search"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginVertical="5dp"
+        android:layout_marginEnd="10dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/address"
+        app:layout_constraintEnd_toEndOf="@id/address"
+        app:layout_constraintTop_toTopOf="@id/address" />
+
 
     <ProgressBar
         android:id="@+id/progress_bar"
