--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -35,8 +35,8 @@
             android:layout_height="80dp"
             android:layout_gravity="center"
             android:background="@android:color/transparent"
-            android:scaleType="fitXY"
             android:onClick="openGallery"
+            android:scaleType="fitXY"
             android:src="@drawable/ic_add_a_photo_24px"
             app:tint="@color/greenishBlue" />
 
@@ -106,6 +106,7 @@
         android:background="@android:color/white"
         android:gravity="start|top"
         android:hint="@string/password"
+        android:inputType="textPassword"
         android:paddingHorizontal="10dp"
         android:paddingVertical="10dp"
         android:textSize="20sp"
