--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="cyan">#E4FF69</color>
     <color name="black">#1A1A1A</color>
     <color name="white">#ffffff</color>
+    <color name="red">#AC0000</color>
 </resources>
